--- a/cart.html
+++ b/cart.html
@@ -38,12 +38,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="cart.html">CART</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">LOGIN</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
-                    <!-- <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
-                    rel="noopener noreferrer">Resume</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#work">Work</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
+                            rel="noopener noreferrer">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -68,43 +68,37 @@
             <div class="card-columns">
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
@@ -121,7 +115,7 @@
 <section class="page-section bg-light" id="about">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">About Us</h2>
+            <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted"></h3>
         </div>
         <div class="row text-center">
@@ -129,13 +123,8 @@
                 database development at Lambton
                 College Missisauga.
                 I have 3.5 years of experience working in the Software industry as a SharePoint developer with
-                expertise in developing solutions using Microsoft technologies on the SharePoint platform.Lorem ipsum
-                dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.
-            <!-- <ul style="text-align: left;">
+                expertise in developing solutions using Microsoft technologies on the SharePoint platform.
+            <ul style="text-align: left;">
                 <li>Has experience working on collaboration and document management systems in Office 365
                     and SharePoint 2013.</li>
                 <li>Has supported various SharePoint client sites and solved various issues real time.</li>
@@ -151,14 +140,17 @@
                 <li>Microsoft Certifications: MS-900 Microsoft 365 Fundamentals and PL-900 Power Platform
                     Fundamentals.</li>
                 <li>Has knowledge about basics of Python Programming.</li>
-            </ul> -->
+            </ul>
             </p>
         </div>
     </div>
     </div>
+</section>
+<!-- Experience-->
+<section class="page-section" id="experience">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase"></h2>
+            <h2 class="section-heading text-uppercase">Experience</h2>
             <h3 class="section-subheading text-muted"></h3>
         </div>
         <ul class="timeline">
@@ -171,11 +163,12 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4 class="subheading">STORE IN TORONTO</h4>
-                        <p>Address</p>
+                        <h4 class="subheading">SOFTWARE ENGINEER/ SHAREPOINT DEVELOPER</h4>
+                        <p>EY Global Delivery Services India LLP</p>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">
+                        <p class="text-muted">Worked as a Software Engineer to develop SharePoint sites and
+                            PowerApps.
                         </p>
                     </div>
                 </div>
@@ -189,11 +182,11 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4 class="subheading">EXTENDED TO</h4>
-                        <p>Address</p>
+                        <h4 class="subheading">SHAREPOINT DEVELOPER</h4>
+                        <p>Joules to Watts Business Solutions Pvt Ltd</p>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">
+                        <p class="text-muted">Worked as a SharePoint Developer to develop various SharePoint sites.
                         </p>
                     </div>
                 </div>
@@ -207,11 +200,11 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4 class="subheading">FIRST STORE AT MISSISSAUGA</h4>
-                        <p>Address</p>
+                        <h4 class="subheading">SHAREPOINT DEVELOPER</h4>
+                        <p>EY Global Delivery Services India LLP</p>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">
+                        <p class="text-muted">Worked as a SharePoint Developer to develop various SharePoint sites.
                         </p>
                     </div>
                 </div>
@@ -220,7 +213,7 @@
     </div>
 </section>
 <!-- Work-->
-<!-- <section class="page-section bg-light" id="work">
+<section class="page-section bg-light" id="work">
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Work</h2>
@@ -264,7 +257,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 <!-- Contact-->
 <section class="page-section" id="contact">
     <div class="container">
@@ -304,12 +297,13 @@
 <footer class="footer py-4">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-4 text-lg-start">Designed and built by:</div>
+            <div class="col-lg-4 text-lg-start">Designed and built by: Jain Joseph</div>
             <div class="col-lg-4 my-3 my-lg-0">
-                <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Facebook"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark btn-social mx-2" href="#" aria-label="LinkedIn"><i
+                <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/jain_josef" aria-label="Twitter"><i
+                        class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/jain.joseph.501/"
+                    aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/feed/" aria-label="LinkedIn"><i
                         class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-lg-4 text-lg-end">
