--- a/feedback.html
+++ b/feedback.html
@@ -40,7 +40,7 @@
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="cart.html">CART</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">LOGIN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#work">LOGIN</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
                     <!-- <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
                     rel="noopener noreferrer">Resume</a></li> -->
@@ -121,7 +121,7 @@
 <section class="page-section bg-light" id="about">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">About Us</h2>
+            <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted"></h3>
         </div>
         <div class="row text-center">
