Changes in about us page

--- a/index.html
+++ b/index.html
@@ -125,11 +125,8 @@
             <h3 class="section-subheading text-muted"></h3>
         </div>
         <div class="row text-center">
-            <p style="text-align: left;">I am currently pursuing my post graduation in Computer Software and
-                database development at Lambton
-                College Missisauga.
-                I have 3.5 years of experience working in the Software industry as a SharePoint developer with
-                expertise in developing solutions using Microsoft technologies on the SharePoint platform.Lorem ipsum
+            <p style="text-align: left;">
+                Lorem ipsum
                 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
