search functionality in home

--- a/index.html
+++ b/index.html
@@ -66,45 +66,45 @@
                 </div>
             </div>
             <div class="card-columns">
-                <div class="card" style="width:260px">
+                <div class="card" id ="avengers1" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
                                 src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
-                <div class="card" style="width:260px">
+                <div class="card" id = "netflix1" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                                src="./assets/img/home/netflix.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
-                <div class="card" style="width:260px">
+                <div class="card" id ="friends1" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                                src="./assets/img/home/friends.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
-                <div class="card" style="width:260px">
+                <div class="card" id = "friends2" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                                src="./assets/img/home/friends2.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
-                <div class="card" style="width:260px">
+                <div class="card" id = "avengers2" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                                src="./assets/img/home/avengers2.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
-                <div class="card" style="width:260px">
+                <div class="card" id = "netflix2" style="width:260px">
                     <div class="card-body">
                         <a href="productdetails.html"><img class="card-img-top"
-                                src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                                src="./assets/img/home/netflix2.jpeg" alt="Card image" style="width:100%">
                         </a>
                     </div>
                 </div>
