--- a/productdetails.html
+++ b/productdetails.html
@@ -21,8 +21,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <script src="social_share.js"></script>
     <link rel="stylesheet" href="font-awesome.css">
+	 
+	<style>
+	h3{
+	color:black;
+	}
+	</style>
 
 </head>
 
@@ -38,12 +43,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#work">Work</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
-                            rel="noopener noreferrer">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cart.html">CART-<span>0</span></a>
+					</li>
                 </ul>
             </div>
         </div>
@@ -68,38 +69,55 @@
             <div class="card-columns">
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
-                        </a>
+                        <img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+						<h3>Grey Tshirt</h3>
+						<h3>$15,00</h3>
+						<a class="add-cart cart1" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
                         <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
+						<h3>Black Tshirt</h3>
+						<h3>$10,00</h3>
+						<a class="add-cart cart2" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
                         <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
+						<h3>Red Tshirt</h3>
+						<h3>$25,00</h3>
+						<a class="add-cart cart3" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
                         <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
+						<h3>Green Tshirt</h3>
+						<h3>$17,00</h3>
+						<a class="add-cart cart4" href="#">Add Cart</a>
+                    </div>
+                </div>
+				<div class="card" style="width:260px">
+                    <div class="card-body">
+                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        </a>
+						<h3>Blue Tshirt</h3>
+						<h3>$25,00</h3>
+						<a class="add-cart cart5" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
                         <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
                         </a>
-                    </div>
-                </div>
-                <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
-                        </a>
+						<h3>Pink Tshirt</h3>
+						<h3>$17,00</h3>
+						<a class="add-cart cart6" href="#">Add Cart</a>
                     </div>
                 </div>
             </div>
@@ -111,188 +129,6 @@
 
 </div>
 </header>
-<!-- About-->
-<section class="page-section bg-light" id="about">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted"></h3>
-        </div>
-        <div class="row text-center">
-            <p style="text-align: left;">I am currently pursuing my post graduation in Computer Software and
-                database development at Lambton
-                College Missisauga.
-                I have 3.5 years of experience working in the Software industry as a SharePoint developer with
-                expertise in developing solutions using Microsoft technologies on the SharePoint platform.
-            <ul style="text-align: left;">
-                <li>Has experience working on collaboration and document management systems in Office 365
-                    and SharePoint 2013.</li>
-                <li>Has supported various SharePoint client sites and solved various issues real time.</li>
-                <li>Has experience working in different phases of application development including requirement
-                    gathering, design, development, and deployment and long-term support.</li>
-                <li>Has experience in migration from old SharePoint version to cloud using Sharegate.</li>
-                <li>Has experience in Business process automation and intelligence with Power Platform
-                    (Power Automate, Power BI, PowerApps).</li>
-                <li>Has experience in designing and developing applications and portals using SharePoint
-                    2010,2013, Office 365, SharePoint 2010/2013 workflow platforms, and SPFx.</li>
-                <li>Experience in customizing SharePoint pages using Bootstrap, JavaScript, jQuery, HTML,
-                    CSS, Angular, TypeScript, and React along with REST API and JSOM.</li>
-                <li>Microsoft Certifications: MS-900 Microsoft 365 Fundamentals and PL-900 Power Platform
-                    Fundamentals.</li>
-                <li>Has knowledge about basics of Python Programming.</li>
-            </ul>
-            </p>
-        </div>
-    </div>
-    </div>
-</section>
-<!-- Experience-->
-<section class="page-section" id="experience">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">Experience</h2>
-            <h3 class="section-subheading text-muted"></h3>
-        </div>
-        <ul class="timeline">
-            <li>
-                <div class="timeline-image">
-                    <h4>
-                        </br>
-                        2020-2021
-                    </h4>
-                </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4 class="subheading">SOFTWARE ENGINEER/ SHAREPOINT DEVELOPER</h4>
-                        <p>EY Global Delivery Services India LLP</p>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">Worked as a Software Engineer to develop SharePoint sites and
-                            PowerApps.
-                        </p>
-                    </div>
-                </div>
-            </li>
-            <li class="timeline-inverted">
-                <div class="timeline-image">
-                    <h4>
-                        </br>
-                        2019-2020
-                    </h4>
-                </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4 class="subheading">SHAREPOINT DEVELOPER</h4>
-                        <p>Joules to Watts Business Solutions Pvt Ltd</p>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">Worked as a SharePoint Developer to develop various SharePoint sites.
-                        </p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="timeline-image">
-                    <h4>
-                        </br>
-                        2018-2019
-                    </h4>
-                </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4 class="subheading">SHAREPOINT DEVELOPER</h4>
-                        <p>EY Global Delivery Services India LLP</p>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">Worked as a SharePoint Developer to develop various SharePoint sites.
-                        </p>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
-<!-- Work-->
-<section class="page-section bg-light" id="work">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">Work</h2>
-            <h3 class="section-subheading text-muted"></h3>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>HTML and CSS</h4>
-                    <p class="text-muted">My Portfolio</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/jainjoseph"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://jain-joseph1996.github.io/jainjoseph/"
-                        aria-label="externallink"><i class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>JAVASCRIPT</h4>
-                    <p class="text-muted">GEAR BIKE SHARE</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/gearbike"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="externallink"><i
-                            class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>SHAREPOINT</h4>
-                    <p class="text-muted">SPFx</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/spfx"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="externallink"><i
-                            class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted"></p>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Contact-->
-<section class="page-section" id="contact">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">Contact</h2>
-            <h3 class="section-subheading text-muted">Say Hello through email</h3>
-        </div>
-        <form id="contactForm">
-            <div class="row align-items-stretch mb-5">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <!-- Subject input-->
-                        <input class="form-control" id="subject" type="text" placeholder="Subject *"
-                            data-sb-validations="required" />
-                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group form-group-textarea mb-md-0">
-                        <!-- Message input-->
-                        <textarea class="form-control" id="message" placeholder="Your Message *"
-                            data-sb-validations="required"></textarea>
-                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Submit success message-->
-
-            <!-- Submit Button-->
-            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase" id="submitButton"
-                    type="submit" onclick="sendMail()">Send Email</button></div>
-        </form>
-    </div>
-</section>
 <!-- Footer-->
 <footer class="footer py-4">
     <div class="container">
@@ -318,6 +154,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="js/scripts.js"></script>
+<script src="cart.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
