--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
         </div>
         <div class="row text-center">
             <p style="text-align: left;">
-                Lorem ipsum
-                dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.
+                We are a family of brands and businesses, making it possible for customers around the world to express themselves through fashion and design, 
+				and to choose a more sustainable lifestyle. We create value for people and society in general by delivering our customer offering and by developing 
+				with a focus on sustainable and profitable growth.
+                
             <!-- <ul style="text-align: left;">
                 <li>Has experience working on collaboration and document management systems in Office 365
                     and SharePoint 2013.</li>
