--- a/productdetails.html
+++ b/productdetails.html
@@ -22,12 +22,12 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="font-awesome.css">
-	 
-	<style>
-	h3{
-	color:black;
-	}
-	</style>
+
+    <style>
+        h3 {
+            color: black;
+        }
+    </style>
 
 </head>
 
@@ -37,14 +37,20 @@
         <div class="container">
             <a class="navbar-brand" href="index.html#page-top">MERCH STORE NAME</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="cart.html">CART-<span>0</span></a>
-					</li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cartdetails.html"><ion-icon name="cart-outline"></ion-icon>
+                            CART(<span> 0</span>)</a>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -70,77 +76,82 @@
                 <div class="card" style="width:260px">
                     <div class="card-body">
                         <img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
-						<h3>Grey Tshirt</h3>
-						<h3>$15,00</h3>
-						<a class="add-cart cart1" href="#">Add Cart</a>
+                        <h3>Grey Tshirt</h3>
+                        <h3>$15</h3>
+                        <a class="add-cart cart1" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#">
+                            <img class="card-img-top" src="./assets/img/home/avengers2.jpeg" alt="Card image" style="width:100%">
                         </a>
-						<h3>Black Tshirt</h3>
-						<h3>$10,00</h3>
-						<a class="add-cart cart2" href="#">Add Cart</a>
+                        <h3>Black Tshirt</h3>
+                        <h3>$10</h3>
+                        <a class="add-cart cart2" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#">
+                            <img class="card-img-top" src="./assets/img/home/friends.jpeg" alt="Card image" style="width:100%">
                         </a>
-						<h3>Red Tshirt</h3>
-						<h3>$25,00</h3>
-						<a class="add-cart cart3" href="#">Add Cart</a>
+                        <h3>Red Tshirt</h3>
+                        <h3>$25</h3>
+                        <a class="add-cart cart3" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#">
+                            <img class="card-img-top" src="./assets/img/home/friends2.jpeg" alt="Card image" style="width:100%">
                         </a>
-						<h3>Green Tshirt</h3>
-						<h3>$17,00</h3>
-						<a class="add-cart cart4" href="#">Add Cart</a>
-                    </div>
-                </div>
-				<div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
-                        </a>
-						<h3>Blue Tshirt</h3>
-						<h3>$25,00</h3>
-						<a class="add-cart cart5" href="#">Add Cart</a>
+                        <h3>Green Tshirt</h3>
+                        <h3>$17</h3>
+                        <a class="add-cart cart4" href="#">Add Cart</a>
                     </div>
                 </div>
                 <div class="card" style="width:260px">
                     <div class="card-body">
-                        <a href="#"><img class="card-img-top" src="./assets/img/home/avengerstshirt.jpeg" alt="Card image" style="width:100%">
+                        <a href="#">
+                            <img class="card-img-top" src="./assets/img/home/netflix.jpeg" alt="Card image" style="width:100%">
                         </a>
-						<h3>Pink Tshirt</h3>
-						<h3>$17,00</h3>
-						<a class="add-cart cart6" href="#">Add Cart</a>
+                        <h3>Blue Tshirt</h3>
+                        <h3>$25</h3>
+                        <a class="add-cart cart5" href="#">Add Cart</a>
+                    </div>
+                </div>
+                <div class="card" style="width:260px">
+                    <div class="card-body">
+                        <a href="#">
+                            <img class="card-img-top" src="./assets/img/home/netflix2.jpeg" alt="Card image" style="width:100%">
+                        </a>
+                        <h3>Pink Tshirt</h3>
+                        <h3>$17</h3>
+                        <a class="add-cart cart6" href="#">Add Cart</a>
                     </div>
                 </div>
             </div>
         </div>
 
-</body>
+        
 
-</html>
 
-</div>
-</header>
+    </header>
 <!-- Footer-->
 <footer class="footer py-4">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4 text-lg-start">Designed and built by: Jain Joseph</div>
             <div class="col-lg-4 my-3 my-lg-0">
-                <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/jain_josef" aria-label="Twitter"><i
-                        class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/jain_josef" aria-label="Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
                 <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/jain.joseph.501/"
-                    aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/feed/" aria-label="LinkedIn"><i
-                        class="fab fa-linkedin-in"></i></a>
+                   aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/feed/" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
             </div>
             <div class="col-lg-4 text-lg-end">
                 <!-- <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
@@ -156,6 +167,8 @@
 <script src="js/scripts.js"></script>
 <script src="cart.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
