--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="cart.html">CART</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">LOGIN</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cartdetails.html"><ion-icon name="cart-outline"></ion-icon>
+                            CART(<span> 0</span>)</a>
+                    </li>
                     <!-- <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
                     rel="noopener noreferrer">Resume</a></li> -->
                 </ul>
@@ -321,7 +324,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="js/scripts.js"></script>
+<script src="cart.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
