--- a/cartdetails.html
+++ b/cartdetails.html
@@ -70,7 +70,7 @@
                 
             </div>
             <div>
-                <button onclick="window.location.href='index.html'">CHECKOUT</button>
+                <button onclick="window.location.href='payment.html'">CHECKOUT</button>
             </div>
         </div>
  
