checkout cart item

--- a/cartdetails.html
+++ b/cartdetails.html
@@ -65,12 +65,11 @@
                 </div>
 
                 <div class="products">
-                   
+                   <p style="font-size: xx-large;color: red;padding-left: 130px;">YOUR CART IS EMPTY!</p>
                 </div>
-                
             </div>
-            <div>
-                <button onclick="window.location.href='index.html'">CHECKOUT</button>
+            <div class="checkout-btn">
+                <button  onclick="checkoutCart()">CHECKOUT</button>
             </div>
         </div>
  
