--- a/payment.html
+++ b/payment.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 
@@ -42,7 +43,7 @@
                 </div>
 
                 <div class="products">
-                   
+                   <p style="font-size: xx-large;color: red;padding-left: 130px;">YOUR CART IS EMPTY!</p>
                 </div>
                 
             </div>
@@ -101,7 +102,7 @@
                         <img src="assets/img/amex.jpg" id="amex">
                     </div>
                     <div class="form-group" id="pay-now">
-                        <button  type="submit" class="add-order order1" id="confirm-purchase" onclick="window.location.href='order.html'">Confirm</button>
+                        <button  type="submit" class="add-cart cart1" id="confirm-purchase" onclick="window.location.href='order.html'">Confirm</button>
                     </div>
                 </form>
             </div>
@@ -148,7 +149,7 @@
 	<!-- Core theme JS-->
 	<script src="js/scripts.js"></script>
 	<script src="cart.js"></script>
-	
+	<!--<script src="order.js"></script>-->
 	<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
