--- a/cartdetails.html
+++ b/cartdetails.html
@@ -68,8 +68,11 @@
                    <p style="font-size: xx-large;color: red;padding-left: 130px;">YOUR CART IS EMPTY!</p>
                 </div>
             </div>
+			<div class="checkout-btn">
+                 <button onclick="checkoutCart()">Empty cart</button>
+        </div><br>
             <div class="checkout-btn">
-                <button  onclick="checkoutCart()">CHECKOUT</button>
+                 <button onclick="proceedpayment()">Proceed to checkout</button>
         </div>
  
     </header>
