--- a/order.html
+++ b/order.html
@@ -44,8 +44,8 @@
                         <a class="nav-link" href="productdetails.html">PRODUCTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="resume-button nav-link" href="/resume.pdf" target="_blank"
-                           rel="noopener noreferrer">Resume</a>
+                        <a class="nav-link" href="cartdetails.html"><ion-icon name="cart-outline"></ion-icon>
+                            CART(<span> 0</span>)</a>
                     </li>
                 </ul>
             </div>
@@ -66,8 +66,10 @@
                     <h5 class="total">TOTAL</h5>
                 </div>
 
-                <div class="products">
+                <div class="products-order">
+                   <div class="empty">
                    <p style="font-size: xx-large;color: red;padding-left: 130px;">YOU dont have any orders</p>
+                   </div>
                 </div>
             </div>
 			
