--- a/productdetails.html
+++ b/productdetails.html
@@ -51,6 +51,10 @@
                             CART(<span> 0</span>)</a>
                     </li>
                     
+                    <li class="nav-item">
+                        <a class="nav-link" href="order.html">ORDERS</a>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
