--- a/cartdetails.html
+++ b/cartdetails.html
@@ -43,9 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="productdetails.html">PRODUCTS</a>
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="resume-button nav-link" href="/resume.pdf" target="_blank"
-                           rel="noopener noreferrer">Resume</a>
+                        <a class="nav-link" href="order.html">ORDERS</a>
                     </li>
                 </ul>
             </div>
@@ -67,13 +67,13 @@
                 <div class="products">
                    <p style="font-size: xx-large;color: red;padding-left: 130px;">YOUR CART IS EMPTY!</p>
                 </div>
+                <div class="clear-btn">
+                    <button onclick="clearCart()">Empty cart</button>
+                </div>
+                <div class="checkout-btn">
+                    <button onclick="proceedpayment()">Proceed to checkout</button>
+                </div>
             </div>
-			<div class="checkout-btn">
-                 <button onclick="checkoutCart()">Empty cart</button>
-        </div><br>
-            <div class="checkout-btn">
-                 <button onclick="proceedpayment()">Proceed to checkout</button>
-        </div>
  
     </header>
     
