--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">LOGIN</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="order.html">ORDERS</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="cartdetails.html"><ion-icon name="cart-outline"></ion-icon>
                             CART(<span> 0</span>)</a>
