cart and alens changes

--- a/productdetails.html
+++ b/productdetails.html
@@ -137,11 +137,31 @@
                 </div>
             </div>
         </div>
-
-        
-
-
     </header>
+<!-- Feedback-->
+<section class="page-section bg-light" id="Feedback">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">We Value Your Feedbacks</h2>
+            <h3 class="section-subheading text-muted"></h3>
+        </div>
+        <!-- -->
+        <div class="container-feedback">
+            <form id="feedback-form">
+                <label for="yourName">Your Name </label>
+                <input type="text" id="yourName" name="yourName" required>
+
+                <label for="feedback">Feedbacks Please</label>
+                <textarea id="feedback" name="feedback" placeholder="Write something.." rows="5"></textarea>
+
+                <button class="submit-button" type="button" onclick="displaymsg();">SUBMIT</button>
+            </form>
+        </div>
+        <span id="demo-feedback"> </span>
+    </div>
+
+    </div>
+</section>
 <!-- Footer-->
 <footer class="footer py-4">
     <div class="container">
