--- a/index.html
+++ b/index.html
@@ -275,18 +275,35 @@
             <div class="row align-items-stretch mb-5">
                 <div class="col-md-12">
                     <div class="form-group">
+                        <!-- Name input-->
+                        <input class="form-control" id="contactname" type="text" placeholder="Name *"
+                               data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <!-- Email input-->
+                        <input class="form-control" id="contactemail" type="email" placeholder="Email *"
+                               data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
                         <!-- Subject input-->
                         <input class="form-control" id="subject" type="text" placeholder="Subject *"
-                            data-sb-validations="required" />
-                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                               data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="subject:required">A subject is required.</div>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="form-group form-group-textarea mb-md-0">
                         <!-- Message input-->
                         <textarea class="form-control" id="message" placeholder="Your Message *"
-                            data-sb-validations="required"></textarea>
-                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.
+                                  data-sb-validations="required"></textarea>
+                        <div class="invalid-feedback" data-sb-feedback="message:required">
+                            A message is required.
                         </div>
                     </div>
                 </div>
@@ -294,8 +311,8 @@
             <!-- Submit success message-->
 
             <!-- Submit Button-->
-            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase" id="submitButton"
-                    type="submit" onclick="sendMail()">Send Email</button></div>
+            <div class="text-center"><button onclick="sendEmail()" class="btn btn-primary btn-xl text-uppercase" id="submitButton"
+                    type="submit" >Send Email</button></div>
         </form>
     </div>
 </section>
