pd page and cart

--- a/cartdetails.html
+++ b/cartdetails.html
@@ -67,11 +67,14 @@
                 <div class="products">
                    <p style="font-size: xx-large;color: red;padding-left: 130px;">YOUR CART IS EMPTY!</p>
                 </div>
+                <div class="btn-cart">
                 <div class="clear-btn">
-                    <button onclick="clearCart()">Empty cart</button>
+                    <button class="btn btn-primary" onclick="clearCart()">Empty cart</button>
                 </div>
+                <br/>
                 <div class="checkout-btn">
-                    <button onclick="proceedpayment()">Proceed to checkout</button>
+                    <button class="btn btn-primary" onclick="proceedpayment()">Proceed to checkout</button>
+                </div>
                 </div>
             </div>
  
