--- a/payment.html
+++ b/payment.html
@@ -78,9 +78,9 @@
                         </select>
                     </div>
                     <div class="form-group" id="credit_cards">
-                        <img src="assets/img/visa.jpg" id="visa">
-                        <img src="assets/img/mastercard.jpg" id="mastercard">
-                        <img src="assets/img/amex.jpg" id="amex">
+                        <img src="assets/img/visa.jpg" id="visa" style="height:3em">
+                        <img src="assets/img/mastercard.jpg" id="mastercard" style="height:3em">
+                        <img src="assets/img/amex.jpg" id="amex" style="height:3em">
                     </div>
                     <div class="form-group" id="pay-now">
                         <button  type="submit" class="add-cart cart1" id="confirm-purchase">Confirm</button>
