--- a/login_sample.html
+++ b/login_sample.html
@@ -82,11 +82,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="cart.html">CART</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#work">LOGIN</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
-                    <!-- <li class="nav-item"><a class="resume-button nav-link" href="/resume.pdf" target="_blank"
+                    <li class="nav-item"><a class="nav-link" href="index.html#about">ABOUT US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login_sample.html">LOGIN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="order.html">ORDERS</a></li>
                     rel="noopener noreferrer">Resume</a></li> -->
                 </ul>
             </div>
