--- a/productdetails.html
+++ b/productdetails.html
@@ -35,7 +35,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html#page-top">MERCH STORE NAME</a>
+            <a class="navbar-brand" href="index.html#page-top">FABULOUS MERCH</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -68,7 +68,7 @@
         <div class="container">
 
             <div class="card-columns">
-                <div class="card" style="width:260px">
+                <div class="card" style="width:260px;margin-top: 0;">
                     <div class="card-body" id="card">
                         <img id="imgid" class="card-img-top" alt="Card image" style="width:100%">
                         <h3 id="prodname"></h3>
@@ -76,56 +76,30 @@
                         <a class="add-cart cart1" href="#">Add Cart</a>
                     </div>
                 </div>
-                <!-- <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#">
-                            <img class="card-img-top" src="./assets/img/home/avengers2.jpeg" alt="Card image" style="width:100%">
-                        </a>
-                        <h3>Black Tshirt</h3>
-                        <h3>$10</h3>
-                        <a class="add-cart cart2" href="#">Add Cart</a>
-                    </div>
+                <div class="desc">
+                    <h3>BASIC PRODUCT DETAILS</h3>
+                    <p>This basic t-shirt features a relaxed fit for unisex. Made from 100% cotton, this
+                        t-shirt is both durable and soft – a great combination if you're looking for that casual
+                        wardrobe staple. Select a design from our marketplace or customize it and unleash your
+                        creativity!
+                        </br>
+                    <h5>Size & Fit</h5>
+                    <ul>
+                        <li>Standard fit</li>
+                        <li> Fits true to size</li>
+                        <li> Standard fit</li>
+                    </ul>
+                    </br>
+                    <h5>Fabric & Care</h5>
+                    <ul>
+                        <li>100% cotton</li>
+                        <li> Tagless label for comfort</li>
+                        <li> Double-needle hemmed sleeves and bottom</li>
+                        <li>Machine wash cold</li>
+                        <li>Imported</li>
+                    </ul>
+
                 </div>
-                <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#">
-                            <img class="card-img-top" src="./assets/img/home/friends.jpeg" alt="Card image" style="width:100%">
-                        </a>
-                        <h3>Red Tshirt</h3>
-                        <h3>$25</h3>
-                        <a class="add-cart cart3" href="#">Add Cart</a>
-                    </div>
-                </div>
-                <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#">
-                            <img class="card-img-top" src="./assets/img/home/friends2.jpeg" alt="Card image" style="width:100%">
-                        </a>
-                        <h3>Green Tshirt</h3>
-                        <h3>$17</h3>
-                        <a class="add-cart cart4" href="#">Add Cart</a>
-                    </div>
-                </div>
-                <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#">
-                            <img class="card-img-top" src="./assets/img/home/netflix.jpeg" alt="Card image" style="width:100%">
-                        </a>
-                        <h3>Blue Tshirt</h3>
-                        <h3>$25</h3>
-                        <a class="add-cart cart5" href="#">Add Cart</a>
-                    </div>
-                </div>
-                <div class="card" style="width:260px">
-                    <div class="card-body">
-                        <a href="#">
-                            <img class="card-img-top" src="./assets/img/home/netflix2.jpeg" alt="Card image" style="width:100%">
-                        </a>
-                        <h3>Pink Tshirt</h3>
-                        <h3>$17</h3>
-                        <a class="add-cart cart6" href="#">Add Cart</a>
-                    </div>
-                </div> -->
             </div>
         </div>
     </header>
