--- a/payment.html
+++ b/payment.html
@@ -105,17 +105,17 @@
                         <tr>
                             <td>Visa</td>
                             <td>4716108999716531</td>
-                            <td>257</td>
+                            <td>xxx</td>
                         </tr>
                         <tr>
                             <td>Master Card</td>
                             <td>5281037048916168</td>
-                            <td>043</td>
+                            <td>xxx</td>
                         </tr>
                         <tr>
                             <td>American Express</td>
                             <td>342498818630298</td>
-                            <td>3156</td>
+                            <td>xxxx</td>
                         </tr>
                     </tbody>
                 </table>
